KAR033 : Internationalisation suite

--- a/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
@@ -97,7 +97,7 @@
 <table>
   <tr>
     <td item-width="350"></td>
-    <td item-width="150"><button class="button" (click)="createStation($event)">Create station</button></td>
+    <td item-width="150"><button class="button" (click)="createStation($event)" translate="CREATE_STATION_TITLE"></button></td>
   </tr>
 </table>
 </div>
