--- a/StationDemoClient/station-angular4-poc/src/app/component/select-station/select-station.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/select-station/select-station.component.html
@@ -24,8 +24,8 @@
   <table>
     <tr>
       <td item-width="150"></td>
-      <td item-width="150"><button class="button" (click)="callUpdateStation($event)">Update</button></td>
-      <td item-width="150"><button class="button" (click)="callDeleteStation($event)">Delete</button></td>      
+      <td item-width="150"><button class="button" (click)="callUpdateStation($event)" translate="UPDATE_STATION_BUTTON"></button></td>
+      <td item-width="150"><button class="button" (click)="callDeleteStation($event)" translate="DELETE_STATION_BUTTON"></button></td>      
     </tr>
 
   </table>
