KAR033 : Internationalisation suite

--- a/StationDemoClient/station-angular4-poc/src/app/component/create-station/create-station.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/create-station/create-station.component.html
@@ -45,7 +45,7 @@
           <input type="number"  formControlName="arrondissement"/>
         </label>
 
-        <input type="submit" class="button expanded" value="Create" [disabled]="disableButton(!rForm.valid)">
+        <input type="submit" class="button expanded" [value]="'CREATE_BUTTON' | translate" [disabled]="disableButton(!rForm.valid)">
       </div>
     </div>
   </form>
