--- a/StationDemoClient/station-angular4-poc/src/app/component/update-station/update-station.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/update-station/update-station.component.html
@@ -23,7 +23,7 @@
 
            <br/>
            <br/>
-           <input type="submit" class="button expanded" value="Update" [disabled]="disableButton(!rForm.valid)">
+           <input type="submit" class="button expanded" [value]="'UPDATE_BUTTON' | translate" [disabled]="disableButton(!rForm.valid)">
       </div>
     </div>
    </form>
