--- a/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
@@ -9,7 +9,7 @@
   <div class="row columns">
     <h2 translate="HELLO_MESSAGE" [translateParams]="paramsHelloMessage">  --   <a (click)="logout()" translate="LOGOUT"></a></h2>
     <br/>
-    Role  : {{roleStore}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+     <span translate="ROLE_MESSAGE" [translateParams]="paramsRoleMessage"></span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <img (click)="switchLanguage('en')" src="assets/drap_GB.gif">&nbsp;&nbsp;&nbsp;<img (click)="switchLanguage('fr')" src="assets/drap_fr.gif">     
     <br/>
     <br/>
