--- a/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/search-station/search-station.component.html
@@ -43,9 +43,7 @@
 
 <ng-container matColumnDef="station">
   <mat-header-cell *matHeaderCellDef mat-sort-header> <span translate="STATION_LABEL"></span> </mat-header-cell>
-  <mat-cell *matCellDef="let element"> <div *ngIf="roleStore != null && roleStore == 'manager'"><a (click)="selectStation(element.id)"> {{element.station}} </a></div>
-     <div *ngIf="roleStore == null || roleStore != 'manager'">{{element.station}} </div>
-  </mat-cell>
+  <mat-cell *matCellDef="let element">  {{element.station}} </mat-cell>
 </ng-container>
 
 <ng-container matColumnDef="reseau">
