--- a/StationDemoClient/station-angular4-poc/src/app/app.component.css
+++ b/StationDemoClient/station-angular4-poc/src/app/app.component.css
@@ -21,7 +21,7 @@
 h1 {
     margin-bottom: 2rem;
     font-weight:bold;
-    font-family:'Muli';
+    font-family: Helvetica, Arial, Verdana, Tahoma, sans-serif;
     font-size: 2em;
 }
 
