--- a/StationDemoClient/station-angular4-poc/src/app/component/header-station/header-station.component.html
+++ b/StationDemoClient/station-angular4-poc/src/app/component/header-station/header-station.component.html
@@ -1,7 +1,7 @@
 <div class="header">
  <h2 translate="HELLO_MESSAGE" [translateParams]="paramsHelloMessage">  --   <a (click)="logout()" translate="LOGOUT"></a></h2>
  <span translate="ROLE_MESSAGE" [translateParams]="paramsRoleMessage"></span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  <img (click)="switchLanguage('en')" src="assets/drap_GB.gif">&nbsp;&nbsp;&nbsp;<img (click)="switchLanguage('fr')" src="assets/drap_fr.gif">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a (click)="goHome()">Home</a>     
+  <img (click)="switchLanguage('en')" src="assets/drap_GB.gif" alt="">&nbsp;&nbsp;&nbsp;<img (click)="switchLanguage('fr')" src="assets/drap_fr.gif" alt="">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a (click)="goHome()">Home</a>     
   <br/>
   <br/>
 </div>
