--- a/application/StationDemoClient/station-angular4-poc/src/app/component/update-station/update-station.component.html
+++ b/application/StationDemoClient/station-angular4-poc/src/app/component/update-station/update-station.component.html
@@ -10,27 +10,27 @@
               </tr>
 
               <tr>
-                <td><span class="pocbold" translate="NETWORK_LABEL">       : </span></td>
+                <td><span class="pocbold" translate="NETWORK_LABEL"></span></td>
                 <td>{{trafficStationBeanUpdate.reseau}}</td>
               </tr>
               <tr>
-                <td><span class="pocbold" translate="STATION_LABEL">        : </span></td>
+                <td><span class="pocbold" translate="STATION_LABEL"></span></td>
                 <td>{{trafficStationBeanUpdate.station}}</td>
               </tr>
               <tr>
-                <td><span class="pocbold" translate="TRAFFIC_LABEL">        : </span></td>
+                <td><span class="pocbold" translate="TRAFFIC_LABEL"></span></td>
                 <td> <input type="number"  formControlName="traffic" /></td>
               </tr>
               <tr>
-                <td><span class="pocbold" translate="CORRESPOND_LABEL">     : </span></td>
+                <td><span class="pocbold" translate="CORRESPOND_LABEL"></span></td>
                 <td> <input type="text"  formControlName="correspondance" value="{{trafficStationBeanUpdate.listCorrespondance}}"/></td>
               </tr>
               <tr>
-                <td><span class="pocbold" translate="CITY_LABEL">     : </span></td>
+                <td><span class="pocbold" translate="CITY_LABEL"></span></td>
                 <td>{{trafficStationBeanUpdate.ville}}</td>
               </tr>
               <tr>
-                <td><span class="pocbold" translate="ARRONDISS_LABEL">     : </span></td>
+                <td><span class="pocbold" translate="ARRONDISS_LABEL"></span></td>
                 <td>{{trafficStationBeanUpdate.arrondissement}}</td>
               </tr>
            </table>
