Select with signal

--- a/application/StationDemoClient/station-angular4-poc/src/app/component/select-station/select-station.component.html
+++ b/application/StationDemoClient/station-angular4-poc/src/app/component/select-station/select-station.component.html
@@ -10,27 +10,27 @@
       </tr>
       <tr>
         <td><span class="pocbold" translate="NETWORK_LABEL"></span></td>
-        <td> {{trafficStationBean.reseau}}</td>
+        <td> {{trafficStationBean()!.reseau}}</td>
       </tr>
       <tr>
         <td><span class="pocbold" translate="STATION_LABEL"></span></td>
-        <td> {{trafficStationBean.station}}</td>
+        <td> {{trafficStationBean()!.station}}</td>
       </tr>
       <tr>
         <td><span class="pocbold" translate="TRAFFIC_LABEL"></span></td>
-        <td> {{trafficStationBean.traffic}}</td>
+        <td> {{trafficStationBean()!.traffic}}</td>
       </tr>
       <tr>
         <td><span class="pocbold" translate="CORRESPOND_LABEL"></span></td> 
-        <td>{{trafficStationBean.listCorrespondance}}</td>
+        <td>{{trafficStationBean()!.listCorrespondance}}</td>
       </tr>
       <tr>
         <td><span class="pocbold" translate="CITY_LABEL"></span></td> 
-        <td>{{trafficStationBean.ville}}</td>
+        <td>{{trafficStationBean()!.ville}}</td>
       </tr>
       <tr>
         <td><span class="pocbold" translate="ARRONDISS_LABEL"></span> </td> 
-        <td>{{trafficStationBean.arrondissement}}</td>
+        <td>{{trafficStationBean()!.arrondissement}}</td>
       </tr>
     </table>
 
