--- a/application/StationDemoClient/station-angular4-poc/src/app/component/create-station/create-station.component.html
+++ b/application/StationDemoClient/station-angular4-poc/src/app/component/create-station/create-station.component.html
@@ -5,7 +5,7 @@
 
         <br/>
        
-        <div *ngIf="errors != null && errors.length != 0">
+        <div *ngIf="errors.length > 0">
           <TABLE BORDER="0">
             <tr *ngFor="let error of errors">
                         
